# yew-study-ssr

./: .todo  Cargo.toml  README.md
scripts/: run.sh
src/: app.rs  app_api.rs  lib.rs
src/components/: header.rs  list_videos.rs  mod.rs
src/routes/: home.rs  login.rs  mod.rs  register.rs
