[package]
name = "simple_ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
yew = { git = "https://github.com/yewstack/yew/" }
yew-router = { git = "https://github.com/yewstack/yew/" }
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.5"
tokio = { version = "1.15.0", features = ["full"] }
num_cpus = "1.13"
tokio-util = { version = "0.7", features = ["rt"] }
once_cell = "1.5"
clap = { version = "3.1.7", features = ["derive"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.3", features = ["fs", "cors", "add-extension"] }

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr", "yew/tokio"]
